[gd_scene load_steps=16 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://addons/dialogue_manager/example_balloon/example_balloon.gd" id="1_4u26j"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]
[ext_resource type="Texture2D" uid="uid://d1xd4052aryle" path="res://art/placeholders/dialogue_assets/placeholder_herobubble.png" id="3_dn43u"]
[ext_resource type="Texture2D" uid="uid://ffseasedo4ux" path="res://art/placeholders/dialogue_assets/placeholder_villainBubble.png" id="4_n1477"]
[ext_resource type="Texture2D" uid="uid://di4uu02814vnd" path="res://art/placeholders/dialogue_assets/placeholder_thought1.png" id="5_iag7b"]
[ext_resource type="Texture2D" uid="uid://cml0fm6vetfp0" path="res://art/placeholders/dialogue_assets/placeholder_thought2.png" id="6_epupf"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_response.gd" id="6_ixcbr"]
[ext_resource type="Texture2D" uid="uid://dw7eo4x8eu1oh" path="res://art/placeholders/dialogue_assets/placeholder_thought3.png" id="7_d2nwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="Theme" id="Theme_01h7a"]
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_4u26j")

[node name="VillainBubble" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 631.0
offset_top = 732.0
offset_right = 1589.0
offset_bottom = 1044.0
texture = ExtResource("4_n1477")

[node name="HeroBubble" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 570.0
offset_top = 100.0
offset_right = 1528.0
offset_bottom = 412.0
texture = ExtResource("3_dn43u")

[node name="Responses" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.226
anchor_top = 0.166
anchor_right = 0.961
anchor_bottom = 0.168
offset_left = 110.08
offset_top = -119.28
offset_right = -734.12
offset_bottom = 681.56
grow_horizontal = 2
grow_vertical = 2

[node name="ResponsesMenu" type="VBoxContainer" parent="Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample1")

[node name="ResponseExample1" type="TextureButton" parent="Responses/ResponsesMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("5_iag7b")
script = ExtResource("6_ixcbr")

[node name="Image" type="TextureRect" parent="Responses/ResponsesMenu/ResponseExample1"]
layout_mode = 0
offset_left = 201.0
offset_top = 60.0
offset_right = 301.0
offset_bottom = 160.0

[node name="ResponseExample2" type="TextureButton" parent="Responses/ResponsesMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("6_epupf")
script = ExtResource("6_ixcbr")

[node name="Image" type="TextureRect" parent="Responses/ResponsesMenu/ResponseExample2"]
layout_mode = 0
offset_left = 249.0
offset_top = 63.0
offset_right = 349.0
offset_bottom = 163.0

[node name="ResponseExample3" type="TextureButton" parent="Responses/ResponsesMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
texture_normal = ExtResource("7_d2nwj")
script = ExtResource("6_ixcbr")

[node name="Image" type="TextureRect" parent="Responses/ResponsesMenu/ResponseExample3"]
layout_mode = 0
offset_left = 229.0
offset_top = 97.0
offset_right = 329.0
offset_bottom = 197.0

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 665.0
offset_top = -927.0
offset_right = -592.0
offset_bottom = -730.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qq3yp")

[node name="Dialogue" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_01h7a")

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Dialogue/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Dialogue/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue... Testing testing evil testing bwa ha ha ha haa."

[node name="ClickMask" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="response_selected" from="Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="gui_input" from="Responses/ResponsesMenu/ResponseExample1" to="Responses/ResponsesMenu" method="_on_response_gui_input"]
[connection signal="mouse_entered" from="Responses/ResponsesMenu/ResponseExample1" to="Responses/ResponsesMenu" method="_on_response_mouse_entered"]
[connection signal="gui_input" from="Responses/ResponsesMenu/ResponseExample2" to="Responses/ResponsesMenu" method="_on_response_gui_input"]
[connection signal="mouse_entered" from="Responses/ResponsesMenu/ResponseExample2" to="Responses/ResponsesMenu" method="_on_response_mouse_entered"]
[connection signal="gui_input" from="Responses/ResponsesMenu/ResponseExample3" to="Responses/ResponsesMenu" method="_on_response_gui_input"]
[connection signal="mouse_entered" from="Responses/ResponsesMenu/ResponseExample3" to="Responses/ResponsesMenu" method="_on_response_mouse_entered"]
[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="gui_input" from="ClickMask" to="." method="_on_click_mask_gui_input"]
